# FLYNC_Grammer

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sonar-project.properties
docs/: Makefile  make.bat
docs/source/: conf.py  contact.rst  flync_example.rst  flync_reference.rst  index.rst  installation.rst  license.rst  quickstart.rst  release_notes.rst
docs/source/_scripts/: create_mermaid.py  make_config_tree.py
docs/source/_static/: custom.css
docs/source/flync_reference/: core.rst  model.rst  sdk.rst
docs/source/flync_reference/sdk_core/: core_reference.rst  error_propagation.rst  field_annotations.rst  sdk_reference.rst
docs/source/flync_reference/submodels/: flync.rst  flync_4_ecu.rst  flync_4_general.rst  flync_4_metadata.rst  flync_4_security.rst  flync_4_someip.rst  flync_4_topology.rst  flync_4_tsn.rst
examples/flync_example/: system_metadata.flync.yaml
examples/flync_example/ecus/: readme.md
examples/flync_example/ecus/eth_ecu/: ports.flync.yaml  topology.flync.yaml
examples/flync_example/ecus/high_processing_core/: ports.flync.yaml  topology.flync.yaml
examples/flync_example/ecus/zonal_platform1/: ports.flync.yaml  topology.flync.yaml
examples/flync_example/ecus/zonal_platform2/: ecu_metadata.flync.yaml  ports.flync.yaml  topology.flync.yaml
examples/flync_example/general/: tcp_profiles.flync.yaml
examples/flync_example/general/someip/: sd_config.flync.yaml
examples/flync_example/topology/: multicast_paths.flync.yaml  system_topology.flync.yaml
examples/flync_somip/: system_metadata.flync
examples/flync_somip/ecus/eth_ecu/: ports.flync  topology.flync
examples/flync_somip/ecus/high_processing_core/: ports.flync  topology.flync
examples/flync_somip/general/: tcp_profiles.flync
examples/flync_somip/general/someip/: sd_config.flync
examples/flync_somip/topology/: multicast_paths.flync  system_topology.flync
scripts/ci/: fetch_pr_data.py
src/flync/core/: __init__.py
src/flync/core/annotations/: __init__.py  external.py  implied.py
src/flync/core/base_models/: __init__.py  base_model.py  dict_instances.py  list_instances.py  resettable_model.py  unique_name.py
src/flync/core/datatypes/: __init__.py  base.py  bitrange.py  ipaddress.py  macaddress.py  value_range.py  value_table.py
src/flync/core/utils/: base_utils.py  common_validators.py  exceptions.py  exceptions_handling.py
src/flync/model/: __init__.py  flync_model.py
src/flync/model/flync_4_ecu/: __init__.py  ecu.py  (+7 more)
src/flync/sdk/: __init__.py
tests/: conftest.py
tests/system_test/: helper.py  test_load_workspace.py
tests/unit_test/core/: test_unique_name_mixin.py
tests/unit_test/model/: conftest.py
tests/unit_test/sdk/: conftest.py  helper.py  test_fuzzy_workspace_loader.py  test_helpers.py
(+74 files in other folders)
